--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -9,7 +9,7 @@
 
 #
 # The minimum loglevel that is logged
-com.jrefinery.report.LogLevel=Debug
+com.jrefinery.report.LogLevel=Info
 
 #
 # Enable aliasing for Graphics2D. This may result is textlayout errors.
