Last update for tables for today. Fixed a bug in the rowspan/colspan calculation ...

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -9,7 +9,7 @@
 
 #
 # The minimum loglevel that is logged
-com.jrefinery.report.LogLevel=Info
+com.jrefinery.report.LogLevel=Debug
 
 #
 # Enable aliasing for Graphics2D. This may result is textlayout errors.
