--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -33,8 +33,9 @@ com.jrefinery.report.targets.G2OutputTarget.isBuggyFRC=false
 #com.jrefinery.report.targets.PDFOutputTarget.AUTOINIT=true
 
 #
-# A URL to the JFreeReport-DTD if not specified in the Document
-com.jrefinery.report.dtd=http://jfreereport.sourceforge.net/report.dtd
+# Should the parser try to validate the report definition?
+# validation is done against the local copy of the DTD.
+com.jrefinery.report.io.validate=true
 
 #
 # Should the logical page add comments to the generated PhysicalOperations? This is
