Many bug fixes, thanks Helmut!

--- a/jfreereport/source/com/jrefinery/report/jfreereport.properties
+++ b/jfreereport/source/com/jrefinery/report/jfreereport.properties
@@ -11,6 +11,12 @@
 # The minimum loglevel that is logged
 com.jrefinery.report.LogLevel=Debug
 
+com.jrefinery.report.preview.plugin.pdf=true
+com.jrefinery.report.preview.plugin.csv=true
+com.jrefinery.report.preview.plugin.html=true
+com.jrefinery.report.preview.plugin.excel=true
+com.jrefinery.report.preview.plugin.plain=true
+
 #
 # Enable aliasing for Graphics2D. This may result is textlayout errors.
 # If your text is not correctly aligned, disable this property.
